--- a/telestyle.css
+++ b/telestyle.css
@@ -1,9 +1,14 @@
-:root {
+[data-theme="dark"] {
   --background: #0d0d0d;
   /* --telescope-highlight: #baead0;
   --telescope-highlight-hover: #8be4b3; */
   /* --telescope-text-color: #ffffff; */
   --telescope-text-color: #eee;
+  --telescope-border: #888;
+}
+[data-theme="light"] {
+  --background: #eee;
+  --telescope-text-color: #0d0d0d;
   --telescope-border: #888;
 }
 
